# uresourced

./: NEWS.md  README  meson.build  meson_options.txt
cgroupify/: cgroupify.c  meson.build
data/: meson-unescape-dropin-dirs.sh  meson.build  org.freedesktop.UResourced.conf  uresourced.conf  uresourced.conf.in
data/system/: meson.build  uresourced.service.in  user@.service
data/user/: cgroupify.scope  cgroupify.service  cgroupify@.service.in  meson.build  move-into-app-slice.scope  move-into-app-slice.service  move-into-session-slice.scope  move-into-session-slice.service  session.slice  uresourced.service.in
scripts/: uncrustify.sh
src/: main.c  meson.build  org.freedesktop.UResourced.xml  r-app-monitor.c  r-app-monitor.h  r-app-policy.c  r-app-policy.h  r-game-monitor.c  r-game-monitor.h  r-manager.c  r-manager.h  r-pw-monitor.c  r-pw-monitor.h  r-sd-login.c  r-sd-login.h  uresourced.gresource.xml  utils.c  utils.h
